Texture paint: crash when painting with clone brush #93117

Closed
opened 2021-11-16 08:33:24 +01:00 by Nahuel Belich · 16 comments

System Information
Operating system: Linux-5.11.0-40-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.106.00

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-15 21:08, hash: 7e42ae7c1a
Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: b7205031ce
Worked: (newest version of Blender that worked as expected)

Short description of error
Trying to clone from paint slots using "Mode= material" "instead "Mode=image" its bugged and potentially crashes

Exact steps for others to reproduce the error

  • Disconnecting the uv from the bottom texture
  • Switch textures four times
  • Paint a long stroke
  • Undo once
  • Undo again, nothing should happend but its required this second undo to trigger the bug
  • Try painting

Test File:
Bug clone.blend
2021-11-17 03-20-16.m4v


blender.exe         :0x00007FF739615C70  CustomData_get_named_layer_index C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\customdata.c:2335
blender.exe         :0x00007FF739615B70  CustomData_get_layer_named C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\customdata.c:3270
blender.exe         :0x00007FF739DE8F40  project_paint_prepare_all_faces C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image_proj.c:4341
blender.exe         :0x00007FF739DE6A20  project_paint_begin C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image_proj.c:4547
blender.exe         :0x00007FF739DE19C0  paint_proj_new_stroke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image_proj.c:5978
blender.exe         :0x00007FF739DDD8D0  texture_paint_init C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image.c:505
blender.exe         :0x00007FF739DDD0D0  paint_stroke_test_start C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image.c:687
blender.exe         :0x00007FF739E1EE30  paint_stroke_modal C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_stroke.c:1481
blender.exe         :0x00007FF739DDCA10  paint_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image.c:709
blender.exe         :0x00007FF739523C40  wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1354
blender.exe         :0x00007FF739521850  wm_handler_operator_call C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2359
blender.exe         :0x00007FF739523050  wm_handlers_do_keymap_with_keymap_handler C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2712
blender.exe         :0x00007FF739522820  wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3039
blender.exe         :0x00007FF739521E70  wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3176
blender.exe         :0x00007FF73951EFB0  wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3739
blender.exe         :0x00007FF7395097D0  WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:650
blender.exe         :0x00007FF739504FD0  main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:563
blender.exe         :0x00007FF73A2CCCF8  __scrt_common_main_seh d:\A01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FF8D9FD7020  BaseThreadInitThunk
ntdll.dll           :0x00007FF8DABE2630  RtlUserThreadStart```
**System Information** Operating system: Linux-5.11.0-40-generic-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.106.00 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-15 21:08, hash: `7e42ae7c1a` Broken: version: 2.93.4, branch: master, commit date: 2021-08-31 09:23, hash: `b7205031ce` Worked: (newest version of Blender that worked as expected) **Short description of error** Trying to clone from paint slots using "Mode= material" "instead "Mode=image" its bugged and potentially crashes **Exact steps for others to reproduce the error** - Disconnecting the uv from the bottom texture - Switch textures four times - Paint a long stroke - Undo once - Undo again, nothing should happend but its required this second undo to trigger the bug - Try painting Test File: [Bug clone.blend](https://archive.blender.org/developer/F11818072/Bug_clone.blend) [2021-11-17 03-20-16.m4v](https://archive.blender.org/developer/F11818069/2021-11-17_03-20-16.m4v) --- ```lines blender.exe :0x00007FF739615C70 CustomData_get_named_layer_index C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\customdata.c:2335 blender.exe :0x00007FF739615B70 CustomData_get_layer_named C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\blenkernel\intern\customdata.c:3270 blender.exe :0x00007FF739DE8F40 project_paint_prepare_all_faces C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image_proj.c:4341 blender.exe :0x00007FF739DE6A20 project_paint_begin C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image_proj.c:4547 blender.exe :0x00007FF739DE19C0 paint_proj_new_stroke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image_proj.c:5978 blender.exe :0x00007FF739DDD8D0 texture_paint_init C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image.c:505 blender.exe :0x00007FF739DDD0D0 paint_stroke_test_start C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image.c:687 blender.exe :0x00007FF739E1EE30 paint_stroke_modal C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_stroke.c:1481 blender.exe :0x00007FF739DDCA10 paint_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\editors\sculpt_paint\paint_image.c:709 blender.exe :0x00007FF739523C40 wm_operator_invoke C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:1354 blender.exe :0x00007FF739521850 wm_handler_operator_call C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2359 blender.exe :0x00007FF739523050 wm_handlers_do_keymap_with_keymap_handler C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:2712 blender.exe :0x00007FF739522820 wm_handlers_do_intern C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3039 blender.exe :0x00007FF739521E70 wm_handlers_do C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3176 blender.exe :0x00007FF73951EFB0 wm_event_do_handlers C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm_event_system.c:3739 blender.exe :0x00007FF7395097D0 WM_main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\blender\windowmanager\intern\wm.c:650 blender.exe :0x00007FF739504FD0 main C:\Users\Pratik\Desktop\BlenderOSP\blender\source\creator\creator.c:563 blender.exe :0x00007FF73A2CCCF8 __scrt_common_main_seh d:\A01\_work\12\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FF8D9FD7020 BaseThreadInitThunk ntdll.dll :0x00007FF8DABE2630 RtlUserThreadStart```

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Hi, thanks for the report. Can confirm the behavior but no crash here on master: 7e42ae7c1af0

(I can also reproduce this on previous versions, may be a known issue?)

Could you please attach crash logs?: https://docs.blender.org/manual/en/dev/troubleshooting/crash.html#crash-log

Hi, thanks for the report. Can confirm the behavior but no crash here on master: `7e42ae7c1af0` (I can also reproduce this on previous versions, may be a known issue?) Could you please attach crash logs?: https://docs.blender.org/manual/en/dev/troubleshooting/crash.html#crash-log

Added subscriber: @pratik-2

Added subscriber: @pratik-2

hi @PratikPB2123 i admit getting to it crashing was harder this time than yesterdays, in this case i have to play a bit more disconnecting uvs from the grid texture and switching uvs in the data click back and forward, basically all i did in the video but it was quite random hope there is a pattern in the logs

Try 1
Bug clone.crash.txt

Try2
Bug clone.crash.txt

Try 3
Bug clone.crash.txt

hi @PratikPB2123 i admit getting to it crashing was harder this time than yesterdays, in this case i have to play a bit more disconnecting uvs from the grid texture and switching uvs in the data click back and forward, basically all i did in the video but it was quite random hope there is a pattern in the logs Try 1 [Bug clone.crash.txt](https://archive.blender.org/developer/F11815455/Bug_clone.crash.txt) Try2 [Bug clone.crash.txt](https://archive.blender.org/developer/F11815463/Bug_clone.crash.txt) Try 3 [Bug clone.crash.txt](https://archive.blender.org/developer/F11815473/Bug_clone.crash.txt)

sorry @pratik-2 Borhade (PratikPB2123) i tag you by mistake and im not sure how unsuscribe you from this task

sorry @pratik-2 Borhade (PratikPB2123) i tag you by mistake and im not sure how unsuscribe you from this task

Hi, still unable to reproduce the crash. Could you please check again with factory prefs?: {nav Edit > Preferences > Save & Load > Load Factory Preferences}

i tag you by mistake and im not sure how unsuscribe you from this task

No problem, I will remove other person :)
(To tag a person, use the name written in bracket after @)

Hi, still unable to reproduce the crash. Could you please check again with factory prefs?: {nav Edit > Preferences > Save & Load > Load Factory Preferences} > i tag you by mistake and im not sure how unsuscribe you from this task No problem, I will remove other person :) (To tag a person, use the name written in bracket after `@`)

Removed subscriber: @pratik-2

Removed subscriber: @pratik-2

@PratikPB2123 im testing it under ubuntu, ill try to test it under windows later, maybe random or may be the OS, im not sure i wasn't able to pinpoint the secuence to trigger the bug, but the undo was a variable in all crashes

this is the test loading factory settings
2021-11-17 02-59-30.m4v

Bug clone.crash.txt

After a few more tries i did pinpoint a bit more the way to trigger the crash
Open this blend file, its basically the same as before but prepared to paint directly (one less step)
Bug clone.blend

  • disconnecting the uv from the bottom texture
  • switch textures four times
  • paint a long stroke
  • undo once
  • undo again, nothing should happend but its required this second undo to trigger the bug
  • try painting

2021-11-17 03-20-16.m4v

@PratikPB2123 im testing it under ubuntu, ill try to test it under windows later, maybe random or may be the OS, im not sure i wasn't able to pinpoint the secuence to trigger the bug, but the undo was a variable in all crashes this is the test loading factory settings [2021-11-17 02-59-30.m4v](https://archive.blender.org/developer/F11818018/2021-11-17_02-59-30.m4v) [Bug clone.crash.txt](https://archive.blender.org/developer/F11818021/Bug_clone.crash.txt) After a few more tries i did pinpoint a bit more the way to trigger the crash Open this blend file, its basically the same as before but prepared to paint directly (one less step) [Bug clone.blend](https://archive.blender.org/developer/F11818072/Bug_clone.blend) - disconnecting the uv from the bottom texture - switch textures four times - paint a long stroke - undo once - undo again, nothing should happend but its required this second undo to trigger the bug - try painting [2021-11-17 03-20-16.m4v](https://archive.blender.org/developer/F11818069/2021-11-17_03-20-16.m4v)

@PratikPB2123 i just tested the release candidate and it crashes consistently with the instructions in the last message

@PratikPB2123 i just tested the release candidate and it crashes consistently with the instructions in the last message

Hi, thanks. I can now reproduce the crash with instructions provided in last message
(Will also see if similar crash report exists or not on tracker)

I will create separate report for other issue as this report currently has two separate reports)

Hi, thanks. I can now reproduce the crash with instructions provided in last message (Will also see if similar crash report exists or not on tracker) I will create separate report for other issue as this report currently has two separate reports)
Pratik Borhade changed title from Clone brush, cloning from painting slot, material mode, delays and crashes to Texture paint: crash when paining with clone brush 2021-11-26 08:05:45 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Pratik Borhade changed title from Texture paint: crash when paining with clone brush to Texture paint: crash when painting with clone brush 2021-11-26 08:06:31 +01:00
Philipp Oeser self-assigned this 2021-11-26 09:28:45 +01:00

This issue was referenced by 5d1efa9759

This issue was referenced by 5d1efa9759c9050fb3f50102cec5a33836f6d225

This issue was referenced by a29283f43a

This issue was referenced by a29283f43a6933726ed10ffaa3821241b219261a

This issue was referenced by 35c3644e78

This issue was referenced by 35c3644e78d37c2413f6a239348fb5ff7d59a647

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93117
There is no content yet.